# XRT

./: .gitignore  .gitmodules  Makefile  README.md  build_all.sh
include/: atomicops.h  decrypt.h  dotproduct.h  dsa_offloads.h  gather.h  gpcore_compress.h  iaa_offloads.h  lzdatagen.h  matmul_histogram.h  numa_mem.h  payload_gen.h  print_utils.h  racer_opts.h  sequential_writer.h  timer_utils.h
include/inline/: decrypt.ipp  gpcore_compress.ipp
scripts/: accel_conf.py  fig6.sh  setup.sh
scripts/confs/: dsa-2n8d64e8w-s-n1-n2.conf  idxd-2n8d64e8w-s-n1-n2.conf
scripts/fig3/: README.md  parse.sh  plot.py  plotter.sh  run.sh  transpose.sh
scripts/fig4/: README.md  parse.sh  plot.py  plotter.sh  run.sh
scripts/fig5/: README.md  parse.sh  run.sh
scripts/fig6/: plot.py  plotter.sh  run.sh  runner.sh
scripts/fig9/: README.md  parse.sh  run.sh
src/: baseline.cpp  blocking_overhead.cpp  context_fast.S  ddh.cpp  dg.cpp  dmd.cpp  dsa_offloads.cpp  iaa_offloads.cpp  jump_x86_64_sysv_elf_gas.S  lzdatagen.cpp  main.cpp  mg.cpp  mmp.cpp  numa_mem.cpp  payload_gen.cpp  pointer_chase.cpp  racer_opts.cpp  ufh.cpp  worker_notified_forward.cpp  worker_vs_dispatcher.cpp
src/XMPPass/: CMakeLists.txt  XMPPass.cpp
src/kernels/: dotproduct.cpp  gather.cpp  matmul_histogram.cpp  sequential_writer.cpp
src/protobuf/: router.proto
